fixed request building